fix input text overflow

--- a/sivut/paastolaskuri/css/style.css
+++ b/sivut/paastolaskuri/css/style.css
@@ -65,6 +65,7 @@ body {
 }
 
 #map-canvas {
+  min-width: 200px;
   height: 70vh;
   width: 100%;
 }
